--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                 </ul>
             </nav>
         </header>
+        <section class="odd">
+            <div class="banner"><img src="resources/images/banner.jpg" alt="Two girls studying together"></div>
+            <div class="banner-text">
+                <h1>Learn something new everyday</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                <p class="start"><a href="#">Start here</a></p>
+            </div>
+        </section>
     </div>
 </body>
 </html>
