--- a/index.html
+++ b/index.html
@@ -25,12 +25,57 @@
                 </ul>
             </nav>
         </header>
-        <section class="odd">
-            <div class="banner"><img src="resources/images/banner.jpg" alt="Two girls studying together"></div>
+        <section class="odd banner">
+            <div class="left"><img src="resources/images/banner.jpg" alt="Two girls studying together"></div>
             <div class="banner-text">
                 <h1>Learn something new everyday</h1>
                 <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
                 <p class="start"><a href="#">Start here</a></p>
+            </div>
+        </section>
+        <section class="even information">
+            <div class="left">
+                <img src="resources/images/information-main.jpg" alt="Student reading a book">
+                <h1>It doesn't hurt to keep practicing</h1>
+                <p>"Curabitur vitae libero ac risus egestas placerat. Sed tincidunt, nisl eget 
+                    aliquam tincidunt, nunc nisl aliquam nunc, eget aliquam nisl nunc euismod nunc."</p>
+                <p><strong>Emanuel, Sr Strategist at Hiring.com</strong></p>
+            </div>
+            <div class="right-info">
+                <div class="info-box">
+                    <div class="info-image">
+                        <img src="resources/images/information-orientation.jpg" 
+                        alt="Kids walking in a campus">
+                    </div>
+                    <div class="info-text">
+                        <h2>Orientation date</h2>
+                        <p class="info-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <p><a href="#">Read more</a></p>
+                    </div>
+                </div>
+                <div class="info-box">
+                    <div class="info-image">
+                        <img src="resources/images/information-campus.jpg" 
+                        alt="A room with desks and chairs">
+                    </div>
+                    <div class="info-text">
+                        <h2>Our campus</h2>
+                        <p class="info-description">Find which campus is close by you</p>
+                        <p><a href="#">Read more</a></p>
+                    </div>
+                </div>
+                <div class="info-box grey-box">
+                    <div class="info-image">
+                        <img src="resources/images/information-guest-lecture.jpg" 
+                        alt="An old man with glasses">
+                    </div>
+                    <div class="info-text">
+                        <h2>Our guest lecture</h2>
+                        <p class="info-description">Join a keynote with Oliver Sack 
+                            about music in medical treatment</p>
+                        <p><a href="#">Read more</a></p>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
