--- a/index.html
+++ b/index.html
@@ -78,6 +78,60 @@
                 </div>
             </div>
         </section>
+        <section class="odd learn-section">
+            <div class="learn-title"><h1>Start learning</h1></div>
+            <div class="learn-boxes">
+                <div class="learn-box">
+                    <img src="resources/images/course-software.jpg" alt="Computer screen with code">
+                    <div class="learn-box-content">
+                        <h2>Software engineering</h2>
+                        <p>COURSES</p>
+                        <p>Web development, Mobile development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="learn-box">
+                    <img src="resources/images/course-computer-art.jpg" alt="A hand holding a smartphone">
+                    <div class="learn-box-content">
+                        <h2>Computer art</h2>
+                        <p>COURSES</p>
+                        <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, 
+                            Computer Animation</p>
+                    </div>
+                </div>
+                <div class="learn-box">
+                    <img src="resources/images/course-design.jpg" alt="Someone holding an old camera">
+                    <div class="learn-box-content">
+                        <h2>Design</h2>
+                        <p>COURSES</p>
+                        <p>User Experience Design, User Research, Visual Design</p>
+                    </div>
+                </div>
+
+                <div class="learn-box">
+                    <img src="resources/images/course-data.jpg" alt="Computer screen with data charts">
+                    <div class="learn-box-content">
+                        <h2>Data</h2>
+                        <p>COURSES</p>
+                        <p>Data Science, Big Data, SQL, Data Visualization</p>
+                    </div>
+                </div>
+                <div class="learn-box">
+                    <img src="resources/images/course-business.jpg" alt="A chess board">
+                    <div class="learn-box-content">
+                        <h2>Business</h2>
+                        <p>COURSES</p>
+                        <p>Product Development, Business Development, Startup</p>
+                    </div>
+                </div>
+                <div class="learn-box">
+                    <img src="resources/images/course-marketing.jpg" alt="A smartwatch on a wrist">
+                    <div class="learn-box-content">
+                        <h2>Marketing</h2>
+                        <p>COURSES</p>
+                        <p>Analytics, Content Marketing, Mobile Marketing</p>
+                    </div>
+                </div>
+        </section>
     </div>
 </body>
 </html>
