--- a/index.html
+++ b/index.html
@@ -132,6 +132,47 @@
                     </div>
                 </div>
         </section>
+        <section class="even thesis-section">
+            <div class="thesis-title"><h1>Thesis exhibit</h1></div>
+            <div class="thesis-content">
+                <div class="thesis-left">
+                    <div class="thesis-video">
+                        <video controls width="100%">
+                            <source src="resources/videos/thesis.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <div class="thesis-text">
+                        <h2>Reimagine urban</h2>
+                        <p>"Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum.
+                            Aliquam erat volutpat. Aenean lacinia bibendum nulla sed consectetur.
+                        Fasellus convallis elit id ligula suscipit, eu tincidunt nisi tincidunt."</p>
+                    </div>
+                </div>
+                <div class="thesis-right">
+                    <div class="info-box">
+                        <div class="info-image">
+                            <img src="resources/images/thesis-fisma.jpg" 
+                                alt="A smartphone and some papers on a desk">
+                        </div>
+                        <div class="info-text">
+                            <h2>Fisma: Design and Prototype</h2>
+                            <p>Designer showcase of new prototype product</p>
+                        </div>
+                    </div>
+                    <div class="info-box">
+                        <div class="info-image">
+                            <img src="resources/images/thesis-now-and-then.jpg" 
+                                alt="New York cityscape">
+                        </div>
+                        <div class="info-text">
+                            <h2>Now and then</h2>
+                            <p>Research study about New York</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
