--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="footer-left">
+                <p>&copy; 2016 Colmar Academy. All rights reserved</p>
+            </div>
+            <div class="footer-right">
+                <p><a href="#">Terms</a>
+                <a href="#">Privacy</a></p>
+            </div>
     </div>
 </body>
 </html>
