Navigation for mobile

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
                 </div>
             </div>
             <nav>
-                <ul>
+                <ul class="nav-desktop">
                     <li><a href="#campus">On campus</a></li>
                     <li><a href="#online">Online</a></li>
                     <li><a href="#companies">For companies</a></li>
                     <li><a href="#signin">Sign in</a></li>
+                </ul>
+                <ul class="nav-mobile">
+                    <a href="#"><img src="resources/images/ic-logo.svg" alt="Colmar Academy Logo"></a>
+                    <li><a href="#campus"><img src="resources/images/ic-on-campus.svg"></a></li>
+                    <li><a href="#online"><img src="resources/images/ic-online.svg"></a></li>
+                    <li><a href="#signin"><img src="resources/images/ic-login.svg"></a></li>
                 </ul>
             </nav>
         </header>
