Information section for mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </section>
         <section class="even information">
-            <div class="left">
+            <div class="left info-left">
                 <img src="resources/images/information-main.jpg" alt="Student reading a book">
                 <h1>It doesn't hurt to keep practicing</h1>
                 <p>"Curabitur vitae libero ac risus egestas placerat. Sed tincidunt, nisl eget 
@@ -51,7 +51,9 @@
                 <div class="info-box">
                     <div class="info-image">
                         <img src="resources/images/information-orientation.jpg" 
-                        alt="Kids walking in a campus">
+                        alt="Kids walking in a campus" class="desktop-image">
+                        <img src="resources/images/information-orientation-mobile.jpg" 
+                        alt="Kids walking in a campus" class="mobile-image">
                     </div>
                     <div class="info-text">
                         <h2>Orientation date</h2>
@@ -62,7 +64,9 @@
                 <div class="info-box">
                     <div class="info-image">
                         <img src="resources/images/information-campus.jpg" 
-                        alt="A room with desks and chairs">
+                        alt="A room with desks and chairs" class="desktop-image">
+                        <img src="resources/images/information-campus-mobile.jpg" 
+                        alt="A room with desks and chairs" class="mobile-image">
                     </div>
                     <div class="info-text">
                         <h2>Our campus</h2>
@@ -73,7 +77,9 @@
                 <div class="info-box grey-box">
                     <div class="info-image">
                         <img src="resources/images/information-guest-lecture.jpg" 
-                        alt="An old man with glasses">
+                        alt="An old man with glasses" class="desktop-image">
+                        <img src="resources/images/information-guest-lecture-mobile.jpg" 
+                        alt="An old man with glasses" class="mobile-image">
                     </div>
                     <div class="info-text">
                         <h2>Our guest lecture</h2>
